@@ -1020,3 +1020,6 @@ ATS V1.5:
     HADOOP-12213. Interrupted exception can occur when Client#stop is called. Contributed by Kuhu Shukla.
 
     HDFS-8891. HDFS concat should keep srcs order. (Yong Zhang via jing9)
+
+    HDFS-8772. Fix TestStandbyIsHot#testDatanodeRestarts which occasionally fails.
+    (Walter Su via wang).
